Fix horizontal scrolling in Tabs component

--- a/src/styl/tabs.styl
+++ b/src/styl/tabs.styl
@@ -34,6 +34,9 @@
 
 
 // tab content
+.tabs-view-wrapper
+  overflow-x: hidden
+
 .tabs-view
   flex 1 1 auto
   display flex
